fixed bg,fixed fter mob,biggersilders,oneline

--- a/404.html
+++ b/404.html
@@ -134,7 +134,13 @@
 
       <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
+          <svg
+            class="someIcons desktopIcons"
+            xmlns="http://www.w3.org/2000/svg"
+            width="47"
+            height="46.715"
+            viewBox="0 0 47 46.715"
+          >
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -146,7 +152,7 @@
         </a>
         <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
-            class="someIcons"
+            class="someIcons desktopIcons"
             xmlns="http://www.w3.org/2000/svg"
             width="42.475"
             height="42.466"
