--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
 <!-- Style your wedding button END-->
    
 <!-- choose us-->
+
     <section class="content-card">
 
         <div class="content-card-frame">
@@ -519,7 +520,7 @@
     <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook"> 
             <svg
-                class="someIcons"
+                class="someIcons desktopIcons"
                 xmlns="http://www.w3.org/2000/svg"
                 width="47"
                 height="46.715"
@@ -536,7 +537,7 @@
         </a>
         <a href="https://www.instagram.com/kvety_cemerica/"aria-label="Instagram">
             <svg
-                class="someIcons"
+                class="someIcons desktopIcons"
                 xmlns="http://www.w3.org/2000/svg"
                 width="42.475"
                 height="42.466"
