--- a/partialProgramme.html
+++ b/partialProgramme.html
@@ -11,7 +11,7 @@
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
-    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp"/>
+    <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp" />
     <title>Kvety Cemerica</title>
   </head>
   <body onload="currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1)">
@@ -304,7 +304,13 @@
 
       <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica" aria-label="Facebook">
-          <svg class="someIcons" xmlns="http://www.w3.org/2000/svg" width="47" height="46.715" viewBox="0 0 47 46.715">
+          <svg
+            class="someIcons desktopIcons"
+            xmlns="http://www.w3.org/2000/svg"
+            width="47"
+            height="46.715"
+            viewBox="0 0 47 46.715"
+          >
             <path
               id="facebook-brands_1_"
               data-name="facebook-brands (1)"
@@ -316,7 +322,7 @@
         </a>
         <a href="https://www.instagram.com/kvety_cemerica/" aria-label="Instagram">
           <svg
-            class="someIcons"
+            class="someIcons desktopIcons"
             xmlns="http://www.w3.org/2000/svg"
             width="42.475"
             height="42.466"
