--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -328,7 +328,7 @@
     <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica"aria-label="Facebook">
             <svg
-                class="someIcons"
+                class="someIcons desktopIcons"
                 xmlns="http://www.w3.org/2000/svg"
                 width="47"
                 height="46.715"
@@ -345,7 +345,7 @@
         </a>
         <a href="https://www.instagram.com/kvety_cemerica/"aria-label="Instagram">
             <svg
-                class="someIcons"
+                class="someIcons desktopIcons"
                 xmlns="http://www.w3.org/2000/svg"
                 width="42.475"
                 height="42.466"
