--- a/flower-availability.html
+++ b/flower-availability.html
@@ -262,7 +262,7 @@
       <div class="footericons-desktop">
         <a href="https://www.facebook.com/kvetycemerica">
           <svg
-            class="someIcons"
+            class="someIcons desktopIcons"
             xmlns="http://www.w3.org/2000/svg"
             width="47"
             height="46.715"
@@ -279,7 +279,7 @@
         </a>
         <a href="https://www.instagram.com/kvety_cemerica/">
           <svg
-            class="someIcons"
+            class="someIcons desktopIcons"
             xmlns="http://www.w3.org/2000/svg"
             width="42.475"
             height="42.466"
