--- a/index.html
+++ b/index.html
@@ -346,14 +346,6 @@
                     <p class="titleChooseUs activeOption" onclick="chooseUsSlides(3)">Our partners</p>
                 </div>
             </div>
-            <!-- choose us nav mobile-->
-            <div class="chooseus-nav-mobile">
-                <div class="content-card-head">
-                    <p class="headstyle1 whyChooseUsFix">Why choose us</p>
-                    <hr width="90%"> 
-                </div>
-            </div>
-            <!-- naviagtion END-->
             <div class="chooseus-content">
                 <div class="chooseUsText">
                     <p class="text-cont" >We are a team of dedicated florists. We understand how important it is to stand out in a creative yet interesting way. Coming up with new ideas and improving our services are just a few of our goals and we try to maintain the beauty and purity of flowers with each step we take.</p>     
@@ -386,8 +378,18 @@
 
 <!--choose us mobile-->
 
+<!-- choose us nav mobile-->
+
     <section class="chooseUsMobile">
-        
+        <div class="chooseus-nav-mobile">
+            <div class="content-card-head">
+                <section class="chooseUsmobileHeadings">
+                <p class="headstyle1 whyChooseUsFix">Why choose us</p>
+                <p class="headstyle2 whyChooseUsFix"> Our Mindset</p>
+            </section>
+                <hr width="90%"> 
+            </div>
+        </div>
         <section class="chooseUsMobilePictures">
             <img loading="lazy" src="img/florist.webp" alt="Team" class="mindsetPicture1">
             <img loading="lazy" src="img/mindset.webp" alt="Process" class="mindsetPicture2">                
@@ -404,9 +406,15 @@
     
 <!--contuinue with workplace here-->
     <section class="chooseUsMobile">
-        <section>
-            <p class="headstyle1 chooseUsMissingHeading">Our workplace</p>
-        </section>
+        <div class="chooseus-nav-mobile">
+            <div class="content-card-head">
+                <section class="chooseUsmobileHeadings">
+                <p class="headstyle1 whyChooseUsFix">Why choose us</p>
+                <p class="headstyle2 whyChooseUsFix"> Our Workplace</p>
+            </section>
+                <hr width="90%"> 
+            </div>
+        </div>
         <section class="chooseUsMobilePictures">
             <img loading="lazy" src="img/workplace1.webp" alt="Flower farm" class="mindsetPicture1">
             <img loading="lazy" src="img/workplace2.webp" alt="Bakery" class="mindsetPicture2">
@@ -423,9 +431,16 @@
    
 <!--contuinue with partners here-->
 <section class="chooseUsMobile">
-    <section>
-        <p class="headstyle1 chooseUsMissingHeading">Our partners</p>
-    </section>
+    <div class="chooseus-nav-mobile">
+        <div class="content-card-head">
+            <section class="chooseUsmobileHeadings">
+            <p class="headstyle1 whyChooseUsFix">Why choose us</p>
+            <p class="headstyle2 whyChooseUsFix"> Our Partners</p>
+        </section>
+            <hr width="90%"> 
+        </div>
+    </div>
+   
     <section class="chooseUsMobilePictures" >
         <img loading="lazy" src="img/bakery.webp" alt="Laura bakery" class="mindsetPicture1">
         <img loading="lazy" src="img/farm.webp" alt="Burina farm" class="mindsetPicture2">
