--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -196,7 +196,7 @@
                 <p class="text-cont2">In this preset you can find everything we are providing</p>
                 <p class="text-cont2">Starts from-1500E</p>
                 <div>
-                    <button class="btn1-light" id="prog-mobile-btn">choose this program</button>
+                   <a href="presetParts.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
             </div>
 
@@ -217,7 +217,7 @@
                 <p class="text-cont2">This preset most of our products that are favorite among customers</p>
                 <p class="text-cont2">Price from-1000E</p>
                 <div>
-                    <button class="btn1-light" id="prog-mobile-btn">choose this program</button>
+                    <a href="partialProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
             </div>
 
@@ -238,7 +238,7 @@
                 <p class="text-cont2">In our base preset you will find most common parts</p>
                 <p class="text-cont2">Price from-700E</p>
                 <div>
-                    <button class="btn1-light" id="prog-mobile-btn">choose this program</button>
+                    <a href="baseProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
             </div>
 
@@ -256,11 +256,6 @@
 </section>
 <!-- promgrammes END-->    
 
-<div class="spacer1"></div>
-<div class="spacer2"></div>
-
-
- 
 <!--Footer mobile-->
 <footer class="footer-mobile">
 
