--- a/presetParts.html
+++ b/presetParts.html
@@ -89,6 +89,7 @@
         </div>
       </section>
     </div>
+    <h6>Parts of this preset</h6>
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
         <p class="activeOption" onclick="currentPresetSlide(1)">Bouquet for bride</p>
