--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -31,11 +31,6 @@
 
       body {
         margin: 0;
-        background-image: url(img/background.webp);
-        background-repeat: no-repeat, repeat;
-        background-size: 130%;
-        /*background-size: cover; /* Resize the background image to cover the entire container */
-        /*box-shadow: inset 0 0 20vmin 0 #585247;}*/
         align-items: center;
       }
       ul {
@@ -95,6 +90,7 @@
         </div>
       </section>
     </div>
+    <h6>Parts of this preset</h6>
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
         <p class="activeOption" onclick="currentPresetSlide(1)">Bouquet for bride</p>
