--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -132,12 +132,13 @@
                         <p>As the name suggests, this program includes the decorations that are a must for every wedding. From the classic bride bouquet to beautifully arranged car decorations, we’ve got it all covered for you.All of the options are customizable, according to your preferences.
                         </p>
                     </div>
+                    
                 </div>
             </a>
             </div>
 
             <div class="prog-it-cont">
-                <a href="presetParts.html">
+                <a href="partialProgramme.html">
                 <div class="prog-img">
                     <img src="img/program2.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
@@ -151,12 +152,12 @@
                 <div class="prog-description">
                     <p>Whether you want your wedding to look simpler, or there are certain decorations you’re looking for, this is the option for you. All of the options are customizable, according to your preferences.
                    </p>
-                </div>     
+                </div>    
             </a>   
             </div>
 
             <div class="prog-it-cont">
-                <a href="presetParts.html">
+                <a href="baseProgramme.html">
                 <div class="prog-img">
                     <img src="img/program1.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
@@ -172,10 +173,13 @@
                     This program offers you all the essentials for a perfect wedding!                        
                    </p>
                 </div>  
+               
             </a>      
             </div>
         </div>
 </section>
+<div class="spacer1"></div>
+<div class="spacer2"></div>
 <!-- promgrammes Desktop END-->
 
 <section id="programs-mobile">
