--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -90,9 +90,10 @@
         </div>
       </section>
     </div>
-    <h6>Parts of this preset</h6>
+
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
+        <h6>Parts of this preset</h6>
         <p class="activeOption" onclick="currentPresetSlide(1)">Bouquet for bride</p>
         <p class="activeOption" onclick="currentPresetSlide(2)">Feather for wedding guests</p>
         <p class="activeOption" onclick="currentPresetSlide(3)">Wedding hall decorations</p>
@@ -102,17 +103,18 @@
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different feathers for wedding guests
+            <u>Possible options</u><br />We offer 3 categories. Feathers for groom, for witnesses and wedding guests
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different wedding hall decorations
+            <u>Possible options</u><br />This divides into- roof, walls and other requested parts
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different other decorations
+            <u>Possible options</u><br />As our other decorations, we offer photo wall, polaroid camera, welcome table
+            and seating plan
           </p>
         </section>
       </section>
@@ -161,7 +163,7 @@
 
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different feathers for guests</p>
+        <p class="possibleOptionsText">We offer 3 categories. Feathers for groom, for witnesses and wedding guests</p>
       </section>
     </section>
     <!--part3-->
@@ -172,7 +174,7 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different wedding hall decorations</p>
+        <p class="possibleOptionsText">This divides into- roof, walls and other requested parts</p>
       </section>
     </section>
     <!--part4-->
@@ -183,7 +185,9 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different other decorations</p>
+        <p class="possibleOptionsText">
+          As our other decorations, we offer photo wall, polaroid camera, welcome table and seating plan
+        </p>
       </section>
     </section>
     <section class="sliderButtons">
