--- a/presetParts.html
+++ b/presetParts.html
@@ -89,9 +89,10 @@
         </div>
       </section>
     </div>
-    <h6>Parts of this preset</h6>
+
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
+        <h6>Parts of this preset</h6>
         <p class="activeOption" onclick="currentPresetSlide(1)">Bouquet for bride</p>
         <p class="activeOption" onclick="currentPresetSlide(2)">Feather for wedding guests</p>
         <p class="activeOption" onclick="currentPresetSlide(3)">Wedding hall decorations</p>
@@ -104,32 +105,32 @@
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different feathers for guests
+            <u>Possible options</u><br />We offer 3 categories. Feathers for groom, for witnesses and wedding guests
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different wedding hall decorations
+            <u>Possible options</u><br />This divides into- roof, walls and other requested parts
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different church decorations
+            <u>Possible options</u><br />This can be divided into altar decorations, chairs for newlyweds and other
+            small decorations
           </p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different car decorations
+            <u>Possible options</u><br />This category varies from each car type and is a matter of consultaion
           </p>
         </section>
         <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different bridesmaids decorations
-          </p>
+          <p class="presetText"><u>Possible options</u><br />This category can include bracelets and headbands</p>
         </section>
         <section class="presetTextAdjust">
           <p class="presetText">
-            <u>Possible options</u><br />You will be able to choose from different other decorations
+            <u>Possible options</u><br />As our other decorations, we offer photo wall, polaroid camera, welcome table
+            and seating plan
           </p>
         </section>
       </section>
@@ -189,7 +190,7 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different feathers for guests</p>
+        <p class="possibleOptionsText">We offer 3 categories. Feathers for groom, for witnesses and wedding guests</p>
       </section>
     </section>
     <!--part3-->
@@ -200,7 +201,7 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different wedding hall decorations</p>
+        <p class="possibleOptionsText">This divides into- roof, walls and other requested parts</p>
       </section>
     </section>
     <!--part4-->
@@ -211,7 +212,9 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different church decorations</p>
+        <p class="possibleOptionsText">
+          This can be divided into altar decorations, chairs for newlyweds and other small decorations
+        </p>
       </section>
     </section>
     <!--part5-->
@@ -222,7 +225,7 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different car decorations</p>
+        <p class="possibleOptionsText">This category varies from each car type and is a matter of consultaion</p>
       </section>
     </section>
     <!--part6-->
@@ -233,7 +236,7 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different bridesmaids decorations</p>
+        <p class="possibleOptionsText">This category can include bracelets and headbands</p>
       </section>
     </section>
     <!--part7-->
@@ -244,7 +247,9 @@
       <h3></h3>
       <section>
         <h4>Possible options</h4>
-        <p class="possibleOptionsText">You will be able to choose from different other decorations</p>
+        <p class="possibleOptionsText">
+          As our other decorations, we offer photo wall, polaroid camera, welcome table and seating plan
+        </p>
       </section>
     </section>
     <section class="sliderButtons">
