changed corners why choose us and fixed and deleted line

--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
           <li class="nav-item-desk">
             <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
           </li>
-          <div class="vl"></div>
+          <div class="vl hiddenVl"></div>
           <li class="nav-item-desk">
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
