--- a/flower-availability.html
+++ b/flower-availability.html
@@ -55,7 +55,7 @@
           <li class="nav-item-desk">
             <a class="nav-link" href="" class="nav-link">Wedding plans</a>
           </li>
-          <div class="vl"></div>
+          <div class="vl hiddenVl"></div>
           <li class="nav-item-desk">
             <a class="nav-link" href="" class="nav-link">Bouquetes</a>
           </li>
