--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
                 </li>
 
-                <div class="vl"></div>
+                <div class="vl hiddenVl"></div>
 
                 <li class="nav-item-desk">
                     <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
