--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -198,7 +198,7 @@
                 <p class="headstyle1">Complete program</p>
                 <hr class="line-mobile"> 
                 <p class="text-cont2">In this preset you can find everything we are providing</p>
-                <p class="text-cont2">Starts from-1500E</p>
+                <p class="text-cont2">Starts from-1500&#8364</p>
                 <div>
                    <a href="presetParts.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
@@ -219,7 +219,7 @@
                 <p class="headstyle1">Partial preset</p>
                 <hr class="line-mobile"> 
                 <p class="text-cont2">This preset most of our products that are favorite among customers</p>
-                <p class="text-cont2">Price from-1000E</p>
+                <p class="text-cont2">Price from-1000&#8364</p>
                 <div>
                     <a href="partialProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
@@ -240,7 +240,7 @@
                 <p class="headstyle1">Base preset</p>
                 <hr class="line-mobile"> 
                 <p class="text-cont2">In our base preset you will find most common parts</p>
-                <p class="text-cont2">Price from-700E</p>
+                <p class="text-cont2">Price from-700&#8364</p>
                 <div>
                     <a href="baseProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
