fixedBtnsIndex,dltRandompics,narrowerbtnsOnstylurwedd,flowersInfloweravailt,tryingtofixLogo

--- a/flower-availability.html
+++ b/flower-availability.html
@@ -172,7 +172,7 @@
         </div>
       </section>
     </section>
-    <section class="seasons-btns-mobile">
+    <section class="seasons-btns-mobile seasons-btns-mobile-Fix">
       <a href="presetParts.html">
         <button class="btn2-light">Previous step</button>
       </a>
