--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -26,21 +26,20 @@
     }
     ul{
         list-style-type: none; 
+   
     }
 </style>
 <body onload="currentSlide(1)">
     <!-- navigation bar-->
     <header>
         <nav class="navbar">
-
             <ul class="nav-logotype">
-                <img src="img/logo.svg" alt="logo" class="nav-logo">
+              <div>  <a href="index.html"><img src="img/logo.svg"  style="width: 130px;" alt="logo" class="nav-logo"></a></div>
                 <div class="vl"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
                 </li>
             </ul>
-
             <ul class="nav-menu">  
                 <li class="nav-item-desk">
                     <a class="nav-link" href="style-your-wedding.html" class="nav-link">Wedding plans</a>
@@ -198,9 +197,9 @@
                 <p class="headstyle1">Complete program</p>
                 <hr class="line-mobile"> 
                 <p class="text-cont2">In this preset you can find everything we are providing</p>
-                <p class="text-cont2">Starts from-1500&#8364</p>
-                <div>
-                   <a href="presetParts.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
+                <p class="text-cont2">Starts from - 1500&#8364</p>
+                <div class="centerButtonFix">
+                   <a href="presetParts.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
                 </div>
             </div>
 
@@ -219,7 +218,7 @@
                 <p class="headstyle1">Partial preset</p>
                 <hr class="line-mobile"> 
                 <p class="text-cont2">This preset most of our products that are favorite among customers</p>
-                <p class="text-cont2">Price from-1000&#8364</p>
+                <p class="text-cont2">Price from - 1000&#8364</p>
                 <div>
                     <a href="partialProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
@@ -240,7 +239,7 @@
                 <p class="headstyle1">Base preset</p>
                 <hr class="line-mobile"> 
                 <p class="text-cont2">In our base preset you will find most common parts</p>
-                <p class="text-cont2">Price from-700&#8364</p>
+                <p class="text-cont2">Price from - 700&#8364</p>
                 <div>
                     <a href="baseProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
                 </div>
