Logotohome,made new underlines until presetparts

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,9 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/logo.svg" alt="logo" class="nav-logo" />
+          <div>
+            <a href="index.html"><img src="img/logo.svg" alt="logo" class="nav-logo" /></a>
+          </div>
           <div class="vl"></div>
           <li class="nav-item">
             <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
@@ -92,7 +94,7 @@
       </section>
     </div>
     <!-- contact desktop grid-->
-    <h6>Your configuration</h6>
+    <h6 class="underlineDLong">Your configuration</h6>
     <section class="contactDesktopHeadingsGrid">
       <p>Your chosen preset</p>
       <p>Available flowers</p>
@@ -141,12 +143,13 @@
     <div class="carousel fadePreview"></div>
     <!--YOUR CONFIGURATION CONTENT-->
     <section class="yourConfigurationSection">
-      <h1>Your configuration</h1>
-      <h2>Chosen preset</h2>
+      <h1 class="underlineLong">Your configuration</h1>
+      <br />
+      <h2 class="underline">Chosen preset</h2>
       <p class="chosenText">Complete programme</p>
-      <h2>Your chosen month</h2>
+      <h2 class="underlineLong">Your chosen month</h2>
       <p class="chosenText">May</p>
-      <h2>Contact form</h2>
+      <h2 class="underline">Contact form</h2>
       <section class="contactMobile">
         <section class="contactMobileContent">
           <p class="contactText">
