--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 <!-- navigation bar-->
     <header>
         <nav class="navbar">
-
             <ul class="nav-logotype">
-                <img src="img/logo.svg"  class="nav-logo" alt="logo">
+                <div>  <a href="index.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
                 <div class="vl"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
@@ -110,8 +109,7 @@
 
                 <article class="slide-card-nav">
                     <div class="content-card-head">
-                        <p class="headstyle1">Bouquet for bride</p>
-                        <hr width="90%"> 
+                        <p class="headstyle1 underlineLong">Bouquet for bride</p>
                     </div>
                 </article>
                                 
@@ -336,8 +334,7 @@
             <div class="content-card-nav">
 
                 <div class="content-card-head">
-                    <p class="headstyle1">Why choose us</p>
-                    <hr width="90%"> 
+                    <p class="headstyle1 underlineLong">Why choose us</p>
                 </div>
     
                 <div class="chooseus-nav">
@@ -384,10 +381,9 @@
         <div class="chooseus-nav-mobile">
             <div class="content-card-head">
                 <section class="chooseUsmobileHeadings">
-                <p class="headstyle1 whyChooseUsFix">Why choose us</p>
+                <p class="headstyle1 whyChooseUsFix underline">Why choose us</p>
                 <p class="headstyle2 whyChooseUsFix"> Our Mindset</p>
             </section>
-                <hr width="90%"> 
             </div>
         </div>
         <section class="chooseUsMobilePictures">
