--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -34,7 +34,7 @@
     <header>
         <nav class="navbar">
             <ul class="nav-logotype">
-              <div>  <a href="index.html"><img src="img/logo.svg"  style="width: 130px;" alt="logo" class="nav-logo"></a></div>
+              <div>  <a href="index.html"><img src="img/logo.svg"   alt="logo" class="nav-logo"></a></div>
                 <div class="vl"></div>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
@@ -103,8 +103,7 @@
 
     <div class="prgtxtcnt">
         <div class="content-card-head">
-            <p class="headstyle1">Our decoration presets</p>
-            <hr width="90%">   
+            <p class="headstyle1 underlineDLong">Our decoration presets</p>
         </div>
         <!--<button class="info-button">more info</button>-->
     </div>
@@ -194,8 +193,7 @@
             </div>
            
             <div class="prog-mobile-text-frame">
-                <p class="headstyle1">Complete program</p>
-                <hr class="line-mobile"> 
+                <p class="headstyle1 underline">Complete program</p>
                 <p class="text-cont2">In this preset you can find everything we are providing</p>
                 <p class="text-cont2">Starts from - 1500&#8364</p>
                 <div class="centerButtonFix">
