--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -41,7 +41,9 @@
     <header>
       <nav class="navbar">
         <ul class="nav-logotype">
-          <img src="img/logo.svg" alt="logo" class="nav-logo" />
+          <div>
+            <a href="index.html"><img src="img/logo.svg" alt="logo" class="nav-logo" /></a>
+          </div>
           <div class="vl"></div>
           <li class="nav-item">
             <a class="nav-link" href="index.html" class="nav-link">Flower studio</a>
