almost done with all lines except of index choose us mobile n desktop

--- a/flower-availability.html
+++ b/flower-availability.html
@@ -97,8 +97,7 @@
     <!-- Season explanation END-->
 
     <section class="season-title">
-      <p class="headstyle1">Season wheel</p>
-      <hr width="90%" />
+      <p class="headstyle1 underlineD" >Season wheel</p>
     </section>
     <div class="vl2"></div>
 
