--- a/presetParts.html
+++ b/presetParts.html
@@ -94,7 +94,7 @@
 
     <section class="gridPresetPreviewDesktop">
       <section class="presetOptions">
-        <h6>Parts of this preset</h6>
+        <h6 class="underlineDLong">Parts of this preset</h6>
         <p class="activeOption" onclick="currentPresetSlide(1)">Bouquet for bride</p>
         <p class="activeOption" onclick="currentPresetSlide(2)">Feather for wedding guests</p>
         <p class="activeOption" onclick="currentPresetSlide(3)">Wedding hall decorations</p>
@@ -103,37 +103,59 @@
         <p class="activeOption" onclick="currentPresetSlide(6)">Bridesmaids decorations</p>
         <p class="activeOption" onclick="currentPresetSlide(7)">Other decorations</p>
         <section class="presetTextAdjust">
-          <p class="presetText"><u>Possible options</u><br />You will be able to choose from different bouquet sizes</p>
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">You will be able to choose from different bouquet sizes</p>
+          </div>
+        </section>
+        <!-- copy from here start-->
+        <section class="presetTextAdjust">
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">We offer 3 categories. Feathers for groom, for witnesses and wedding guests</p>
+          </div>
+        </section>
+        <!-- copy from here end-->
+        <section class="presetTextAdjust">
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">This divides into- roof, walls and other requested parts</p>
+          </div>
         </section>
         <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />We offer 3 categories. Feathers for groom, for witnesses and wedding guests
-          </p>
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">
+              This can be divided into altar decorations, chairs for newlyweds and other small decorations
+            </p>
+          </div>
         </section>
         <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />This divides into- roof, walls and other requested parts
-          </p>
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">This category varies from each car type and is a matter of consultation</p>
+          </div>
         </section>
         <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />This can be divided into altar decorations, chairs for newlyweds and other
-            small decorations
-          </p>
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">This category can include bracelets and headbands</p>
+          </div>
         </section>
         <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />This category varies from each car type and is a matter of consultaion
-          </p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText"><u>Possible options</u><br />This category can include bracelets and headbands</p>
-        </section>
-        <section class="presetTextAdjust">
-          <p class="presetText">
-            <u>Possible options</u><br />As our other decorations, we offer photo wall, polaroid camera, welcome table
-            and seating plan
-          </p>
+          <div class="presetText">
+            <p class="underline">Possible options</p>
+            <br />
+            <p class="possibleOptText">
+              As our other decorations, we offer photo wall, polaroid camera, welcome table and seating plan
+            </p>
+          </div>
         </section>
       </section>
       <!--bouquete for bride desktop pictures-->
@@ -175,45 +197,44 @@
     </section>
     <!-- part1-->
     <section class="bouquetePart">
-      <h2>Bouquet for bride</h2>
+      <h2 class="underlineLong">Bouquet for bride</h2>
 
       <img class="shownProduct" src="img/bouquet2.webp" alt="Flower Bouquetes" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">You will be able to choose from different bouquet sizes</p>
       </section>
     </section>
     <!-- part2-->
     <section class="bouquetePart">
-      <h2>Feathers for wedding guests</h2>
-
+      <h2 class="underlineLong">Feathers for wedding guests</h2>
       <img class="shownProduct" src="img/buttonholes1.webp" alt="buttoiere" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">We offer 3 categories. Feathers for groom, for witnesses and wedding guests</p>
       </section>
     </section>
     <!--part3-->
     <section class="bouquetePart">
-      <h2>Wedding hall decorations</h2>
+      <h2 class="underlineLong">Wedding hall decorations</h2>
 
       <img class="shownProduct" src="img/weddingvenue1.webp" alt="Wedding venue" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">This divides into- roof, walls and other requested parts</p>
       </section>
     </section>
     <!--part4-->
     <section class="bouquetePart">
-      <h2>Church decorations</h2>
+      <h2 class="underlineLong">Church decorations</h2>
 
       <img class="shownProduct" src="img/churchdecorations1.webp" alt="Church decoration" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">
           This can be divided into altar decorations, chairs for newlyweds and other small decorations
         </p>
@@ -221,34 +242,34 @@
     </section>
     <!--part5-->
     <section class="bouquetePart">
-      <h2>Car decorations</h2>
+      <h2 class="underlineLong">Car decorations</h2>
 
       <img class="shownProduct" src="img/cardecoration3.webp" alt="Car decorations" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">This category varies from each car type and is a matter of consultaion</p>
       </section>
     </section>
     <!--part6-->
     <section class="bouquetePart">
-      <h2>Bridesmaids decorations</h2>
+      <h2 class="underlineLong">Bridesmaids decorations</h2>
 
       <img class="shownProduct" src="img/bridesmatesdecoration2.webp" alt="bridesmaids decoration" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">This category can include bracelets and headbands</p>
       </section>
     </section>
     <!--part7-->
     <section class="bouquetePart">
-      <h2>Other decorations</h2>
+      <h2 class="underlineLong">Other decorations</h2>
 
       <img class="shownProduct" src="img/otherdecorations1.webp" alt="bridesmaids decorations" />
       <h3></h3>
       <section>
-        <h4>Possible options</h4>
+        <h4 class="underlineLong">Possible options</h4>
         <p class="possibleOptionsText">
           As our other decorations, we offer photo wall, polaroid camera, welcome table and seating plan
         </p>
