finished style on all lines and choose us section minor fixes

--- a/index.html
+++ b/index.html
@@ -334,13 +334,13 @@
             <div class="content-card-nav">
 
                 <div class="content-card-head">
-                    <p class="headstyle1 underlineLong">Why choose us</p>
+                    <p class="headstyle1 underlineDLong">Why choose us</p>
                 </div>
     
                 <div class="chooseus-nav">
-                    <p class="titleChooseUs activeOption" onclick="chooseUsSlides(1)">Our mindset</p>
-                    <p class="titleChooseUs activeOption" onclick="chooseUsSlides(2)">Our workplace</p>
-                    <p class="titleChooseUs activeOption" onclick="chooseUsSlides(3)">Our partners</p>
+                    <p class="titleChooseUs underlineD" onclick="chooseUsSlides(1)">Our mindset</p>
+                    <p class="titleChooseUs underlineD" onclick="chooseUsSlides(2)">Our workplace</p>
+                    <p class="titleChooseUs underlineD" onclick="chooseUsSlides(3)">Our partners</p>
                 </div>
             </div>
             <div class="chooseus-content">
@@ -389,7 +389,7 @@
             <div class="content-card-head">
                 <section class="chooseUsmobileHeadings">
                 <p class="headstyle1 whyChooseUsFix underline">Why choose us</p>
-                <p class="headstyle2 whyChooseUsFix"> Our Mindset</p>
+                <p class="headstyle2 whyChooseUsFix2"> Our Mindset</p>
             </section>
             </div>
         </div>
@@ -412,10 +412,9 @@
         <div class="chooseus-nav-mobile">
             <div class="content-card-head">
                 <section class="chooseUsmobileHeadings">
-                <p class="headstyle1 whyChooseUsFix">Why choose us</p>
-                <p class="headstyle2 whyChooseUsFix"> Our Workplace</p>
+                <p class="headstyle1 whyChooseUsFix underline">Why choose us</p>
+                <p class="headstyle2 whyChooseUsFix2"> Our Workplace</p>
             </section>
-                <hr width="90%"> 
             </div>
         </div>
         <section class="chooseUsMobilePictures">
@@ -437,10 +436,9 @@
     <div class="chooseus-nav-mobile">
         <div class="content-card-head">
             <section class="chooseUsmobileHeadings">
-            <p class="headstyle1 whyChooseUsFix">Why choose us</p>
-            <p class="headstyle2 whyChooseUsFix"> Our Partners</p>
+            <p class="headstyle1 whyChooseUsFix underline">Why choose us</p>
+            <p class="headstyle2 whyChooseUsFix2"> Our Partners</p>
         </section>
-            <hr width="90%"> 
         </div>
     </div>
    
