fixed issues with pluses and changed them

--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -116,9 +116,13 @@
                 <div class="prog-img">
                     <img src="img/program3.webp" alt="plus icon" class="whitePlus">
                         <div class="middle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="auto"  fill="white" class="bi-plus" viewBox="0 0 16 16">
-                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="bi-plus" width="70%" viewBox="0 0 110.985 111">
+                                <g id="Сгруппировать_5" data-name="Сгруппировать 5" transform="translate(0)">
+                                  <rect id="Прямоугольник_5" data-name="Прямоугольник 5" width="6" height="111" rx="3" transform="translate(52.5)" fill="#fff"/>
+                                  <rect id="Прямоугольник_6" data-name="Прямоугольник 6" width="7.193" height="110.985" rx="3.597" transform="translate(110.985 51.896) rotate(90)" fill="#fff"/>
+                                </g>
+                              </svg>
+                              
                         </div>
                     </img>
                 </div>
@@ -140,9 +144,12 @@
                 <div class="prog-img">
                     <img src="img/program2.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="auto"  fill="white" class="bi bi-plus" viewBox="0 0 16 16">
-                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="bi-plus" width="70%" viewBox="0 0 110.985 111">
+                                <g id="Сгруппировать_5" data-name="Сгруппировать 5" transform="translate(0)">
+                                  <rect id="Прямоугольник_5" data-name="Прямоугольник 5" width="6" height="111" rx="3" transform="translate(52.5)" fill="#fff"/>
+                                  <rect id="Прямоугольник_6" data-name="Прямоугольник 6" width="7.193" height="110.985" rx="3.597" transform="translate(110.985 51.896) rotate(90)" fill="#fff"/>
+                                </g>
+                              </svg>
                         </div>
                     <p class="title1">Partial program</p>
                     <hr width="70%">
@@ -159,9 +166,12 @@
                 <div class="prog-img">
                     <img src="img/program1.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="auto"  fill="white" class="bi bi-plus" viewBox="0 0 16 16">
-                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="bi-plus" width="auto" viewBox="0 0 110.985 111">
+                                <g id="Сгруппировать_5" data-name="Сгруппировать 5">
+                                  <rect id="Прямоугольник_5" data-name="Прямоугольник 5" width="6" height="111" rx="3" transform="translate(52.5)" fill="#fff"/>
+                                  <rect id="Прямоугольник_6" data-name="Прямоугольник 6" width="7.193" height="110.985" rx="3.597" transform="translate(110.985 51.896) rotate(90)" fill="#fff"/>
+                                </g>
+                              </svg>
                         </div>
                     <p class="title1">Base program</p>
                     <hr width="70%">
