added slideshows , h6contact, chagned wheel,

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
       </section>
     </div>
     <!-- contact desktop grid-->
-    <h6 class="underlineDLong">Your configuration</h6>
+    <h6 class="underlineDLong configurationHeadingFix">Your configuration</h6>
     <section class="contactDesktopHeadingsGrid">
       <p>Your chosen preset</p>
       <p>Available flowers</p>
