--- a/flower-availability.html
+++ b/flower-availability.html
@@ -60,7 +60,7 @@
             <a class="nav-link" href="" class="nav-link">Bouquetes</a>
           </li>
           <li class="nav-mobile">
-            <a class="nav-link" href="" class="nav-link">More</a>
+            <a class="nav-link" href="" class="nav-link">Bouquetes</a>
           </li>
         </ul>
       </nav>
@@ -102,6 +102,9 @@
     <div class="vl2"></div>
 
     <!-- season wheel -->
+              <!-- MObile Version start/ carousel -->
+              <div class="carousel fadePreview"></div>
+            
 
     <section id="season-desktop-frame">
       <section class="season-wheel">
